# rust-roguelike

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  savegame.json
docs/: design.md
src/: camera.rs  combat.rs  components.rs  distance.rs  gamelog.rs  gui.rs  hunger.rs  inventory.rs  main.rs  map.rs  map_indexing.rs  monsters.rs  particle.rs  pathfinding.rs  player.rs  resources.rs  rng.rs  saveload.rs  shapes.rs  spawner.rs  traps.rs  viewshed.rs
src/debug/: commands.rs  console.rs  mod.rs  overlays.rs  resources.rs
src/map_builders/: area_based.rs  bsp_dungeon.rs  bsp_interior.rs  cellular_automata.rs  common.rs  corridors.rs  dla.rs  doors.rs  drunkard.rs  erosion.rs  maze.rs  mod.rs  prefab.rs  room_based.rs  room_modifiers.rs  room_sorter.rs  rooms_only.rs  simple_map.rs  voronoi.rs  wfc.rs
src/ui/: components.rs  hud.rs  menu.rs  mod.rs  resources.rs  targeting.rs  tooltip.rs
src/ui/menus/: game_over.rs  inventory.rs  mod.rs
